// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #007;
  border-radius: 3px;
  background: #ddd;
  display: block;
  background: #ddd;
  background-image: none;
  background-repeat: no-repeat;
  background-position: right center;
  width: 100%;
}

.c0::-webkit-input-placeholder {
  color: #667;
}

.c0::-moz-placeholder {
  color: #667;
}

.c0:-ms-input-placeholder {
  color: #667;
}

.c0::placeholder {
  color: #667;
}

.c0:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

<input
  autoComplete="off"
  className="sc-fzqLLg c0"
  disabled={true}
/>
`;

exports[`renders correctly with invalid prop 1`] = `
.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #007;
  border-color: #b44;
  border-radius: 3px;
  background: #fff;
  display: block;
  background: #fff;
  background-image: url(invalid.png);
  background-repeat: no-repeat;
  background-position: right center;
  width: 100%;
}

.c0::-webkit-input-placeholder {
  color: #667;
}

.c0::-moz-placeholder {
  color: #667;
}

.c0:-ms-input-placeholder {
  color: #667;
}

.c0::placeholder {
  color: #667;
}

.c0:-webkit-autofill {
  -webkit-animation-name: iNHLNs;
  animation-name: iNHLNs;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

<input
  autoComplete="off"
  className="sc-fzqLLg c0"
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #007;
  border-radius: 3px;
  background: #fff;
  display: block;
  background: #fff;
  background-image: none;
  background-repeat: no-repeat;
  background-position: right center;
  width: 100%;
}

.c0::-webkit-input-placeholder {
  color: #667;
}

.c0::-moz-placeholder {
  color: #667;
}

.c0:-ms-input-placeholder {
  color: #667;
}

.c0::placeholder {
  color: #667;
}

.c0:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

<input
  autoComplete="off"
  className="sc-fzqLLg c0"
/>
`;

exports[`renders correctly with valid prop 1`] = `
.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #007;
  border-color: #3a3;
  border-radius: 3px;
  background: #fff;
  display: block;
  background: #fff;
  background-image: url(valid.png);
  background-repeat: no-repeat;
  background-position: right center;
  width: 100%;
}

.c0::-webkit-input-placeholder {
  color: #667;
}

.c0::-moz-placeholder {
  color: #667;
}

.c0:-ms-input-placeholder {
  color: #667;
}

.c0::placeholder {
  color: #667;
}

.c0:-webkit-autofill {
  -webkit-animation-name: bOhPIr;
  animation-name: bOhPIr;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

<input
  autoComplete="off"
  className="sc-fzqLLg c0"
/>
`;
